# mcp-naturalfrequency

./: .gitignore  README.md  eigenfrequency.py  main.py  mcp-naturalfrequency.py  mcp.py  naturalfrequency.py  pyproject.toml  theorie.md
